--- a/Gamification/Gamification/Gamification/ClientApp/src/app/components/app.component.html
+++ b/Gamification/Gamification/Gamification/ClientApp/src/app/components/app.component.html
@@ -24,10 +24,10 @@
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{'mainMenu.Tasks' | translate}}<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li routerLinkActive="active" *ngIf="canViewActiveTasks">
-                <a style="margin-left: 10px" routerLink="/activeTasks">{{'mainMenu.ActiveTasks' | translate}}</a>
+                <a style="margin-left: 10px" routerLink="/activetasks">{{'mainMenu.ActiveTasks' | translate}}</a>
               </li>
               <li routerLinkActive="active" *ngIf="canViewInactiveTasks">
-                <a style="margin-left: 10px" routerLink="/inactiveTasks">{{'mainMenu.InactiveTasks' | translate}}</a>
+                <a style="margin-left: 10px" routerLink="/inactivetasks">{{'mainMenu.InactiveTasks' | translate}}</a>
               </li>
 
             </ul>
@@ -38,10 +38,10 @@
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{'mainMenu.Add' | translate}}<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li routerLinkActive="active" *ngIf="canViewBonuses">
-                <a style="margin-left: 10px" routerLink="/addTask">{{'mainMenu.AddTask' | translate}}</a>
+                <a style="margin-left: 10px" routerLink="/addtask">{{'mainMenu.AddTask' | translate}}</a>
               </li>
               <li routerLinkActive="active" *ngIf="canViewBonuses">
-                <a style="margin-left: 10px" routerLink="/addBonus">{{'mainMenu.AddBonus' | translate}}</a>
+                <a style="margin-left: 10px" routerLink="/addbonus">{{'mainMenu.AddBonus' | translate}}</a>
               </li>
 
               <!--<li><a href="#">Action</a></li>
