--- a/Gamification/Gamification/Gamification/ClientApp/src/app/components/add-bonus/add-bonus.component.html
+++ b/Gamification/Gamification/Gamification/ClientApp/src/app/components/add-bonus/add-bonus.component.html
@@ -1,3 +1,34 @@
-<p>
-  add-bonus works!
-</p>
+<div class="row">
+  <div class="col-md-4">
+
+    <div class="form-group">
+      <label>{{'mainMenu.Name' | translate}}</label><br>
+      <input class="form-control" type="text" [(ngModel)]="bonus.name" value="{{bonus.name}}" />
+    </div>
+
+    <div class="form-group">
+      <label>{{'mainMenu.Description' | translate}}</label><br>
+      <input class="form-control" type="text" [(ngModel)]="bonus.description" value="{{bonus.description}}" />
+    </div>
+
+    <div class="form-group">
+      <label>{{'mainMenu.Price' | translate}}</label><br>
+      <input class="form-control" type="number" [(ngModel)]="bonus.price" value="{{bonus.price}}" />
+    </div>
+
+    <div class="form-group">
+      <label>{{'mainMenu.Amount' | translate}}</label><br>
+      <input class="form-control" type="number" [(ngModel)]="bonus.amount" value="{{bonus.amount}}" />
+    </div>
+
+    <div class="form-group">
+      <label>{{'mainMenu.TimeLimit' | translate}}</label><br>
+      <input class="form-control" type="date" [(ngModel)]="bonus.timeLimit" value="{{bonus.timeLimit}}" />
+    </div>
+
+    <div>
+      <input type="button" (click)="createBonus()" class="btn btn-primary" value="{{'mainMenu.Create' | translate}}" />
+    </div>
+
+  </div>
+</div>
