Add features to view active and inactive tasks.

--- a/Gamification/Gamification/Gamification/ClientApp/src/app/components/active-tasks/active-tasks.component.html
+++ b/Gamification/Gamification/Gamification/ClientApp/src/app/components/active-tasks/active-tasks.component.html
@@ -1,3 +1,22 @@
-<p>
-  active-tasks works!
-</p>
+<div class="row">
+  <div class="col-md-4">
+
+    <br>
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let t of tasks; let i = index">
+
+        <label>&nbsp;&nbsp;{{t.name}}&nbsp;&nbsp;P:&nbsp;{{t.price}}</label>
+        <input style="float: right" type="button" (click)="activateTask()" class="btn btn-danger" value="{{'mainMenu.Remove' | translate}}" />
+        <hr />
+
+        <label>{{t.description}}</label>
+
+        <span *ngIf="t.timeLimit != null">
+          <br><label>Time limit:&nbsp;{{dates[i]}}</label>
+        </span>
+
+      </li>
+    </ul>
+    <br>
+  </div>
+</div>
